# hspine

./: README.md  hspine.cabal  spineRT_notes.md
app/: Main.hs
bridge/: CMakeLists.txt  bridge.c  bridge.h  main  test-bridge.c
simpar/: README.md  output.hsc  output_f.hsc  output_s.hsc  simpar.cabal  test.h
simpar/app/: Main.hs
simpar/src/: Simpar.hs
simpar/src/Simpar/: Print.hs  Types.hs
src/: Spine.hs
src/Spine/: Exp.hs  Raw.hs
src/Spine/Raw/: Animation.hsc  AnimationState.hsc  AnimationStateData.hsc  Atlas.hsc  AtlasAttachmentLoader.hsc  Attachment.hsc  AttachmentLoader.hsc  Bone.hsc  BoneData.hsc  BoundingBoxAttachment.hsc  Event.hsc  EventData.hsc  IkConstraint.hsc  IkConstraintData.hsc  InternalEnum.hsc  InternalStruct.hsc  InternalTest.hsc  MeshAttachment.hsc  PathAttachment.hsc  PathConstraint.hsc  PathConstraintData.hsc  RegionAttachment.hsc  Skeleton.hsc  SkeletonBinary.hsc  SkeletonBounds.hsc  SkeletonData.hsc  SkeletonJson.hsc  Skin.hsc  Slot.hsc  SlotData.hsc  Test.hsc  TransformConstraint.hsc  TransformConstraintData.hsc  VertexAttachment.hsc
test/: Spec.hs
