name:                hspine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hspine
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    include-dirs:
        spine-c/spine-c/include
    install-includes:
        spine/Animation.h
        spine/AnimationState.h
        spine/AnimationStateData.h
        spine/Atlas.h
        spine/AtlasAttachmentLoader.h
        spine/Attachment.h
        spine/AttachmentLoader.h
        spine/Bone.h
        spine/BoneData.h
        spine/BoundingBoxAttachment.h
        spine/Event.h
        spine/EventData.h
        spine/IkConstraint.h
        spine/IkConstraintData.h
        spine/MeshAttachment.h
        spine/PathAttachment.h
        spine/PathConstraint.h
        spine/PathConstraintData.h
        spine/RegionAttachment.h
        spine/Skeleton.h
        spine/SkeletonBinary.h
        spine/SkeletonBounds.h
        spine/SkeletonData.h
        spine/SkeletonJson.h
        spine/Skin.h
        spine/Slot.h
        spine/SlotData.h
        spine/TransformConstraint.h
        spine/TransformConstraintData.h
        spine/VertexAttachment.h
        -- -- -- seems unnecessary
        -- spine/extension.h
        -- spine/spine.h
    extra-lib-dirs:
        /Users/jaiyalas/Project/hspine/spine-c/build
    extra-libraries:
        spine-c
    ghc-options: -w
    exposed-modules:
        -- Spine
        --
        Spine.Raw
        -- Spine.Raw.InternalTest
        --
        Spine.Raw.InternalEnum
        Spine.Raw.InternalStruct
        --
        Spine.Raw.Animation
        Spine.Raw.AnimationState
        Spine.Raw.AnimationStateData
        Spine.Raw.Atlas
        Spine.Raw.AtlasAttachmentLoader
        Spine.Raw.Attachment
        Spine.Raw.AttachmentLoader
        Spine.Raw.Bone
        Spine.Raw.BoneData
        Spine.Raw.BoundingBoxAttachment
        Spine.Raw.Event
        Spine.Raw.EventData
        Spine.Raw.IkConstraint
        Spine.Raw.IkConstraintData
        Spine.Raw.MeshAttachment
        Spine.Raw.PathAttachment
        Spine.Raw.PathConstraint
        Spine.Raw.PathConstraintData
        Spine.Raw.RegionAttachment
        Spine.Raw.Skeleton
        Spine.Raw.SkeletonBinary
        Spine.Raw.SkeletonBounds
        Spine.Raw.SkeletonData
        Spine.Raw.SkeletonJson
        Spine.Raw.Skin
        Spine.Raw.Slot
        Spine.Raw.SlotData
        Spine.Raw.TransformConstraint
        Spine.Raw.TransformConstraintData
        Spine.Raw.VertexAttachment
    hs-source-dirs:      src
    default-language:    Haskell2010
    -- -- -- -- -- -- -- -- -- -- -- --
    build-depends:       base >= 4.7 && < 5
                 ,       data-default
    -- -- -- -- -- -- -- -- -- -- -- --
    build-tools:         hsc2hs
--
test-suite test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base
                 ,       hspine
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hspine
